# godot-decklink

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  deploy.yml
cmake/Modules/: FindDeckLink.cmake
demo/: project.godot
demo/addons/godot-decklink/: godot-decklink.gdextension  godot-decklink.gdextension.uid
demo/scenes/: decklink_demo.tscn
demo/scripts/: decklink_demo.gd  decklink_demo.gd.uid
src/: decklink.cpp  decklink.hpp  decklink_common.hpp  decklink_device.cpp  decklink_device.hpp  decklink_input.cpp  decklink_input.hpp  decklink_memory_video_frame.cpp  decklink_memory_video_frame.hpp  decklink_output.cpp  decklink_output.hpp  decklink_video_frame.cpp  decklink_video_frame.hpp  register_types.cpp  register_types.hpp
